--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ hr {
 body{
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: #153b49;
-    color: rgb(221, 213, 213);
+    color: rgb(145, 18, 18);
 
 
 
@@ -44,14 +44,14 @@ h3{
     text-decoration: none;
     padding: 10px;
     margin: 5px;
-    background-color:plum;
+    background-color:rgb(133, 28, 133);
     border-radius: 5px;
     transition: ease 0.3s;
 
 }
 
 .link:hover{
-    background-color:rebeccapurple;
+    background-color:rgb(150, 123, 177);
 }
 
 .link > img {
